# uv_trial

./: .gitignore  hello.py  pyproject.toml
customers_data_mart/: .part-00000-cac4542f-73f7-4522-aa05-273435dc511c-c000.snappy.parquet.crc  part-00000-cac4542f-73f7-4522-aa05-273435dc511c-c000.snappy.parquet
resources/data/: employee_data.csv
resources/sql_scripts/: mysqlsampledatabase.sql
sales_team_data_mart/: .part-00000-4cad7705-0336-47b7-8bb7-cb99edc8c563-c000.snappy.parquet.crc  part-00000-4cad7705-0336-47b7-8bb7-cb99edc8c563-c000.snappy.parquet
src/main/: main.py  trial.py
src/main/delete/: local_file_delete.py
src/main/download/: gcs_file_download.py
src/main/move/: move_files.py
src/main/read/: gcs_read.py  spark_db_read.py
src/main/transformations/jobs/: customer_mart_sql_transform_write.py  dimension_tables_join.py  sales_mart_sql_transform_write.py
src/main/upload/: move_file_to_GCS.py
src/main/utility/: create_bq_dataset_table.py  gcs_client_object.py  generate_sample_data.py  load_data_bq_to_mysql.py  logging_config.py  move_file_to_GCS.py  my_sql_session.py  spark_session.py
src/main/write/: dataframe_writer.py
src/test/: scratch_pad.py
src/trial_non_related_project/: HR_loops_5.py  notepad_like.sql
